--- a/popup.html
+++ b/popup.html
@@ -1,9 +1,18 @@
 <!doctype html>
 <html>
   <head>
+      <style>
+        button {
+          height: 30px;
+          width: 30px;
+          outline: none;
+        }
+      </style>
     <title>Test</title>
   </head>
   <body>
     <h1>Hello World!</h1>
+    <button id="changeColorButton"></button>
+    <script src="popup.js"></script>
   </body>
 </html>
