added extension.html back in manifest and removed dataDict

--- a/extension.html
+++ b/extension.html
@@ -13,7 +13,7 @@
 
 <body>
     <button id="activate">See The World</button>
-    <script src="jquery-3.3.1.min.js"></script>
+    <script src="includes/js/jquery-3.3.1.min.js"></script>
     <script src="extension.js"></script>
 </body>
 
