improve documentation and naming

--- a/extension.html
+++ b/extension.html
@@ -1,3 +1,7 @@
+<!-- ********* extension code ********** -->
+<!-- this is the html code for the mini-page 
+    that opens when you click on the extension icon -->
+
 <!DOCTYPE html>
 <html>
 
