--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -39,6 +39,6 @@
 
     <body>
         <div id="root"></div>
-        <script src="./popupBundle.js"></script>
+        <script src="../js/popupBundle.js"></script> <!--The location is relative to the dist folder-->
     </body>
 </html>
