tippy.js replaces with React and changed SeeTheWorld to Wanderland

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -10,7 +10,7 @@
             name="viewport"
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
-        <title>See the World - Popup</title>
+        <title>Wanderland - Popup</title>
         <style>
             body {
                 font-family: 'Segoe UI', 'Lucida Grande', Tahoma, sans-serif;
