popups working on (seamingly) any page now... ohhh yeah

--- a/src/popup/popup.html
+++ b/src/popup/popup.html
@@ -11,9 +11,10 @@
             content="width=device-width, initial-scale=1, shrink-to-fit=no"
         />
         <title>Wanderland - Popup</title>
+        <link href="https://fonts.googleapis.com/css?family=Work+Sans" rel="stylesheet" />
         <style>
             body {
-                font-family: 'Segoe UI', 'Lucida Grande', Tahoma, sans-serif;
+                font-family: 'Work Sans';
                 font-size: 100%;
                 text-align: center;
                 width: 800px;
@@ -39,6 +40,7 @@
 
     <body>
         <div id="root"></div>
-        <script src="../js/popupBundle.js"></script> <!--The location is relative to the dist folder-->
+        <script src="../js/popupBundle.js"></script>
+        <!--The location is relative to the dist folder-->
     </body>
 </html>
